[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio-real-estate-bot"
version = "1.0.0"
description = "An anonymized Telegram bot template for property search and lead collection."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiogram==3.27.0",
  "aiosqlite==0.22.1",
  "aiohttp==3.13.5",
  "python-dotenv==1.2.2",
  "redis==7.4.0",
  "psutil==7.2.2"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
portfolio-bot = "portfolio_bot.main:main"
